--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 /* Topo da página */
 .topo {
     width: 100%;
-    height: 14%;
+    height: 13%;
     position: fixed;
     background-color: #604829;
     z-index: 1;
@@ -28,7 +28,8 @@
 .topo img {
     width: 100px;
     position: relative;
-    left: 15%;
+    left: 10%;
+    bottom: 15%;
 }
 
 .topo div {
